--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,8 @@
 <nav class="navbar">
   <div class="container">
-    <a href="/" class="navbar-brand">🎬</a>
+    <a href="/" class="navbar-brand">
+      <img src="/images/Logo_RMGe.png" alt="Logo do site" class="navbar-logo">
+    </a>
     <ul class="navbar-links">
       <li><a href="/">Início</a></li>
       <li><a href="/filmes">Filmes</a></li>
