--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="/css/error.css">
 </head>
 
-<body>
+<body class="error-page">
   <%- include('../partials/navbar') %>
     <div class="error-container">
       <div class="error-code">
