--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,11 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   margin: 0;
-  background-color: #f4f4f4;
-  color: #333;
+  margin-bottom: 2rem;
+  /* Fundo principal escuro */
+  background-color: #2f2f2f;
+  /* Cor de texto principal clara */
+  color: #ffffff;
 }
 
 .container {
@@ -11,11 +14,10 @@ body {
   padding: 0 1rem;
 }
 
-/* Estilos da Navbar  */
 .navbar {
-  background-color: #2c3e50;
+  background-color: #202020;
   padding: 1rem 0;
-  border-bottom: 3px solid #e74c3c;
+  border-bottom: 3px solid #f6c700;
   width: 100%;
   box-sizing: border-box;
 }
@@ -36,6 +38,7 @@ body {
 
 .navbar-brand:hover {
   transform: scale(1.05);
+  color: #f6c700;
 }
 
 .navbar-links {
@@ -57,8 +60,8 @@ body {
 }
 
 .navbar-links a:hover {
-  color: #e74c3c;
-  border-bottom-color: #e74c3c;
+  color: #f6c700;
+  border-bottom-color: #f6c700;
 }
 
 .navbar-logo {
