Consertei o o bug de não conseguir acessar as séries que o ator participou

--- a/views/pages/actor-details.ejs
+++ b/views/pages/actor-details.ejs
@@ -37,13 +37,16 @@
             <span class="filme-titulo">
               <% 
                 let mediaRoute = '/';
+                let mediaTitle = '';
                 if (item.tipo === 'Filme') {
-                  mediaRoute = '/movies/' + item.id;
+                  mediaRoute = '/movies/' + item.midia_id;
+                  mediaTitle = item.titulo;
                 } else if (item.tipo === 'Episódio de Série') {
-                  mediaRoute = '/shows/' + item.id;
+                  mediaRoute = '/shows/' + item.serie_id;
+                  mediaTitle = item.serie_nome || '(Série desconhecida)';
                 } 
               %>
-              <a href="<%= mediaRoute %>"><%= item.titulo %></a>
+              <a href="<%= mediaRoute %>"><%= mediaTitle %></a>
             </span>
             <span class="filme-personagem"><%= item.personagem %></span>
           </div>
