--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/home.css">
+  <link rel="icon" type="image/png" href="/images/Logo_RMGe_icon.png">
   <title>
     <%= pageTitle %>
   </title>
