--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
 <body>
   <%- include('../partials/navbar') %>
     <div class="container">
-      <h1>Página Inicial</h1>
+      <h1>Menu Principal</h1>
 
       <h2>Filmes</h2>
 
