--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="container">
-    <a href="/" class="navbar-brand">
+    <a href="/">
       <img src="/images/Logo_RMGe.png" alt="Logo do site" class="navbar-logo">
     </a>
     <ul class="navbar-links">
