Adicionada a página de todos os filmes.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,9 +5,9 @@
     </a>
     <ul class="navbar-links">
       <li><a href="/">Início</a></li>
-      <li><a href="/filmes">Filmes</a></li>
-      <li><a href="/series">Séries</a></li>
-      <li><a href="/atores">Atores</a></li>
+      <li><a href="/movies">Filmes</a></li>
+      <li><a href="/shows">Séries</a></li>
+      <li><a href="/actors">Atores</a></li>
     </ul>
   </div>
 </nav>
