Adição das páginas de todas as séries e todos os atores.

--- a/views/pages/actor-details.ejs
+++ b/views/pages/actor-details.ejs
@@ -90,7 +90,7 @@
         <p>Nenhuma atuação encontrada para este ator.</p>
       <% } %>
     </div>
-    <a href="/atores" class="back-link">← Voltar para todos os atores</a>
+    <a href="/actors" class="back-link">← Voltar para todos os atores</a>
 
   </div>
 </body>
