--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,10 +4,13 @@
       <img src="/images/Logo_RMGe.png" alt="Logo do site" class="navbar-logo">
     </a>
     <ul class="navbar-links">
-      <li><a href="/">Início</a></li>
+      <!-- <li><a href="/">Início</a></li> -->
       <li><a href="/movies">Filmes</a></li>
       <li><a href="/shows">Séries</a></li>
       <li><a href="/actors">Atores</a></li>
+      <li><a href="/directors">Diretores</a></li>
+      <li><a href="/writers">Roteiristas</a></li>
+      <li><a href="/producers">Produtores</a></li>
     </ul>
   </div>
 </nav>
