--- a/views/pages/movie-details.ejs
+++ b/views/pages/movie-details.ejs
@@ -43,18 +43,64 @@
       </div>
 
       <h3 class="elenco-titulo">Elenco</h3>
+
+      <h4 class="cargo-titulo">Atores</h4>
       <div class="elenco-container">
-        <% if (atores && atores.length> 0) { %> <% atores.forEach(ator=> { %>
+        <% if (atores && atores.length > 0) { %> <% atores.forEach(ator => { %>
         <div class="pessoa-card">
-          <a href="/actor-details/<%= ator.id %>" class="pessoa-link">
-            <span class="pessoa-nome"> <%= ator.nome %> </span>
+          <a href="/person-details/<%= ator.pessoa_id %>" class="pessoa-link">
+            <span class="pessoa-nome"> <%= ator.nome_ator %> </span>
           </a>
-          <span class="ator-personagem"> <%= ator.personagem %> </span>
+          <span class="personagem-nome"> <%= ator.personagem %> </span>
         </div>
         <% }); %> <% } else { %>
-        <p>Informações de elenco não disponíveis.</p>
+        <p class="mensagem-erro">Informações de elenco não disponíveis.</p>
         <% } %>
       </div>
+
+      <h4 class="cargo-titulo">Diretores</h4>
+      <div class="elenco-container">
+        <% if (diretores && diretores.length > 0) { %> <% diretores.forEach(diretor => { %>
+        <div class="pessoa-card">
+          <a href="/person-details/<%= diretor.pessoa_id %>" class="pessoa-link">
+            <span class="pessoa-nome"> <%= diretor.nome_diretor %> </span>
+          </a>
+          <span class="cargo-nome">Diretor(a)</span>
+        </div>
+        <% }); %> <% } else { %>
+        <p class="mensagem-erro">Informações de elenco não disponíveis.</p>
+        <% } %>
+      </div>
+
+      <h4 class="cargo-titulo">Roteirstas</h4>
+      <div class="elenco-container">
+        <% if (roteiristas && roteiristas.length > 0) { %> <% roteiristas.forEach(roteirista => { %>
+        <div class="pessoa-card">
+          <a href="/person-details/<%= roteirista.pessoa_id %>" class="pessoa-link">
+            <span class="pessoa-nome"> <%= roteirista.nome_roteirista %> </span>
+          </a>
+          <span class="cargo-nome">Roteirista</span>
+        </div>
+        <% }); %> <% } else { %>
+        <p class="mensagem-erro">Informações de elenco não disponíveis.</p>
+        <% } %>
+      </div>
+
+      <h4 class="cargo-titulo">Produtores</h4>
+      <div class="elenco-container">
+        <% if (produtores && produtores.length > 0) { %> <% produtores.forEach(produtor => { %>
+        <div class="pessoa-card">
+          <a href="/person-details/<%= produtor.pessoa_id %>" class="pessoa-link">
+            <span class="pessoa-nome"> <%= produtor.nome_pessoa_produtora %> </span>
+          </a>
+          <span class="cargo-nome">Produtor(a)</span>
+        </div>
+        <% }); %> <% } else { %>
+        <p class="mensagem-erro">Informações de elenco não disponíveis.</p>
+        <% } %>
+      </div>
+
+
       <h3 class="reviews-titulo">Avaliações</h3>
       <div class="reviews-container">
         <% if (avaliacoes && avaliacoes.length> 0) { %> <% avaliacoes.forEach(avaliacao=> { %>
