--- a/views/pages/writers.ejs
+++ b/views/pages/writers.ejs
@@ -13,23 +13,23 @@
   <body>
     <%- include('../partials/navbar') %>
     <div class="container">
-      <h1>Atores (A - Z)</h1>
+      <h1>Roteiristas (A - Z)</h1>
 
-      <%initialLetters = Object.keys(atores).sort();
+      <%initialLetters = Object.keys(roteiristas).sort();
       if(initialLetters.length > 0) { initialLetters.forEach(letter => { const
-      actorsInSection = atores[letter]; %>
+      writersInSection = roteiristas[letter]; %>
 
       <section class="same-initial-section">
         <h2 id="letter-<%= letter %>" class="letter-title"><%= letter %></h2>
 
         <div class="objects-grid">
-          <% actorsInSection.forEach(actor => { %>
+          <% writersInSection.forEach(writer => { %>
           <div class="object-card">
             <h4>
-              <a href="person-details/<%= actor.id %>"> <%= actor.nome %> </a>
+              <a href="/person-details/<%= writer.id %>"> <%= writer.nome %> </a>
             </h4>
             <p>
-              <%= actor.local_de_nascimento ? actor.local_de_nascimento : 'N/A' %>
+              <%= writer.local_de_nascimento ? writer.local_de_nascimento : 'N/A' %>
             </p>
           </div>
           <% }); %>
